[tool.poetry]
name = "pythonprojectcurswork1"
version = "0.1.0"
description = ""
authors = ["Natalya Sharova <nat_sha10@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.1.1"
pandas = "^2.3.3"
requests = "^2.32.5"
poetry-core = "^2.2.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.17.0"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 119
exclude = ".git"

[tool.isort]
line_length = 119
force_single_line = true

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
